test/resources/typer/failing/Call2.scala
object Call2
  fn weirdFunction(l: L.List, i : Int(32), s: String, b: Boolean, u : Unit): Unit ={
      error(s)
  }

  weirdFunction(false,9,"s",true,())  

end Call2